--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -147,7 +147,12 @@
                     </Grid.ColumnDefinitions>
                     <DataGrid 
                    MouseDoubleClick="DataGrid_MouseDoubleClick"
-                        ItemsSource="{Binding AllRequests,Mode=TwoWay}" 
+                        SelectedItem="{Binding SelectedAllRequest,
+                        Mode=TwoWay,
+                        UpdateSourceTrigger=PropertyChanged}"
+                        ItemsSource="{Binding AllRequests,
+                        Mode=TwoWay,
+                        UpdateSourceTrigger=PropertyChanged}" 
                         AutoGenerateColumns="False"
                         CanUserSortColumns="True" 
                         Grid.ColumnSpan="2">
@@ -230,7 +235,13 @@
                                         <StackPanel Orientation="Horizontal">
                                             <Button BorderBrush="#E9E9E9" 
                                                     BorderThickness="1"
-                                                    Background="Transparent">
+                                                    Background="Transparent"
+                                                    Command="{Binding 
+                                                RelativeSource={RelativeSource 
+                                                AncestorType={x:Type UserControl}}, 
+                                                Path=DataContext.AcceptedCommand,
+                                                UpdateSourceTrigger=PropertyChanged}"
+                                                    CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Source="/Images/acceptIcon.png" />
                                                     <TextBlock Margin="5,0">Accept</TextBlock>
@@ -240,7 +251,13 @@
                                                 Margin="5,0"
                                                 BorderBrush="#E9E9E9" 
                                                     BorderThickness="1"
-                                                    Background="Transparent">
+                                                    Background="Transparent"
+                                                Command="{Binding 
+                                                RelativeSource={RelativeSource 
+                                                AncestorType={x:Type UserControl}}, 
+                                                Path=DataContext.RejectedCommand,
+                                                UpdateSourceTrigger=PropertyChanged}"
+                                                    CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Source="/Images/rejectIcon.png" />
                                                     <TextBlock Margin="5,0">Reject</TextBlock>
