--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -147,12 +147,9 @@
                     </Grid.ColumnDefinitions>
                     <DataGrid 
                    MouseDoubleClick="DataGrid_MouseDoubleClick"
-                        SelectedItem="{Binding SelectedAllRequest,
-                        Mode=TwoWay,
-                        UpdateSourceTrigger=PropertyChanged}"
-                        ItemsSource="{Binding AllRequests,
-                        Mode=TwoWay,
-                        UpdateSourceTrigger=PropertyChanged}" 
+                        SelectedItem="{Binding SelectedAllRequest,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                        ItemsSource="{Binding AllRequests,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
+                        
                         AutoGenerateColumns="False"
                         CanUserSortColumns="True" 
                         Grid.ColumnSpan="2">
@@ -233,31 +230,13 @@
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
-                                            <Button BorderBrush="#E9E9E9" 
-                                                    BorderThickness="1"
-                                                    Background="Transparent"
-                                                    Command="{Binding 
-                                                RelativeSource={RelativeSource 
-                                                AncestorType={x:Type UserControl}}, 
-                                                Path=DataContext.AcceptedCommand,
-                                                UpdateSourceTrigger=PropertyChanged}"
-                                                    CommandParameter="{Binding .}">
+                                            <Button BorderBrush="Transparent" BorderThickness="0">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Source="/Images/acceptIcon.png" />
                                                     <TextBlock Margin="5,0">Accept</TextBlock>
                                                 </StackPanel>
                                             </Button>
-                                            <Button 
-                                                Margin="5,0"
-                                                BorderBrush="#E9E9E9" 
-                                                    BorderThickness="1"
-                                                    Background="Transparent"
-                                                Command="{Binding 
-                                                RelativeSource={RelativeSource 
-                                                AncestorType={x:Type UserControl}}, 
-                                                Path=DataContext.RejectedCommand,
-                                                UpdateSourceTrigger=PropertyChanged}"
-                                                    CommandParameter="{Binding .}">
+                                            <Button BorderBrush="Transparent" BorderThickness="0">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Source="/Images/rejectIcon.png" />
                                                     <TextBlock Margin="5,0">Reject</TextBlock>
