edited by naveed

--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -223,6 +223,8 @@
                                                        Grid.Column="1"/>
 
                                             </Grid>
+                                             
+                                            <!--edited-->
 
                                         </Border>
                                     </DataTemplate>
