--- a/ideaForge/Pages/DashboardPages/OnGoingRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/OnGoingRidePage.xaml
@@ -10,7 +10,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="620" d:DesignWidth="1000">
     <UserControl.DataContext>
-        <vm:CompleteRideViewModel/>
+        <vm:OnGoingRideViewModel/>
     </UserControl.DataContext>
     <Grid Background="#EEEEEF">
         <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,0,20,0">
@@ -43,9 +43,8 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding MissionType}" Height="35"  Foreground="Black">
                             </TextBox>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -60,9 +59,8 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding TotalRequestedTime}" Height="35"  Foreground="Black">
                             </TextBox>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -77,9 +75,8 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding FlightDate}" Height="35"  Foreground="Black">
                             </TextBox>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -93,9 +90,8 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black" Margin="15,0,0,0">
+                            <TextBox  Text="{Binding FlightTime}" Height="35"  Foreground="Black" Margin="15,0,0,0">
                             </TextBox>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -118,7 +114,6 @@
                             </Label>
                             <TextBox  Text="On" Height="35"  Foreground="Black" Margin="15,0,0,0">
                             </TextBox>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -135,7 +130,6 @@
                             </Label>
                             <TextBox  Text="Yes" Height="35"  Foreground="Black" Margin="15,0,10,0">
                             </TextBox>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -150,13 +144,12 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding StatusForUser}" Height="35"  Foreground="Black">
                             </TextBox>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
-                      
+
                     </Grid>
                 </Border>
                 <Grid Margin="0,0,0,204">
@@ -220,43 +213,39 @@
                                     <CheckBox   Height="22"  Foreground="Black" Width="21"/>
                                     <Label Content="CAMERA ERROR"/>
                                 </StackPanel>
-                           
 
 
-                                <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
+
                             </Grid>
 
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
                         <StackPanel Orientation="Vertical" Margin="0,30,10,0" Grid.Row="0" Grid.Column="1">
-                            
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="auto"/>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto"/>
-                                        <ColumnDefinition Width="auto" />
-                                        <ColumnDefinition Width="auto" />
-                                    </Grid.ColumnDefinitions>
-                                    <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Margin="0,19,10,0">
-                                        <CheckBox   Height="22"  Foreground="Black" Width="21"/>
-                                        <Label Content="TECHNICAL ERROR"/>
-                                    </StackPanel>
-                              
+
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto"/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto" />
+                                    <ColumnDefinition Width="auto" />
+                                </Grid.ColumnDefinitions>
+                                <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Margin="0,19,10,0">
+                                    <CheckBox   Height="22"  Foreground="Black" Width="21"/>
+                                    <Label Content="TECHNICAL ERROR"/>
+                                </StackPanel>
 
 
-                                    <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
-                                </Grid>
-                          
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
+
+                            </Grid>
+
                         </StackPanel>
 
 
                         <StackPanel Orientation="Vertical" Margin="0,30,10,0" Grid.Row="0" Grid.Column="2" >
-                            
+
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto"/>
@@ -270,17 +259,15 @@
                                     <CheckBox   Height="22"  Foreground="Black" Width="21"/>
                                     <Label Content="COMMUNICATION LOSS"/>
                                 </StackPanel>
-                           
 
 
-                                <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
+
                             </Grid>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
                         <StackPanel Orientation="Vertical" Margin="0,30,10,0" Grid.Row="0" Grid.Column="3" >
-                            
+
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="auto"/>
@@ -294,16 +281,13 @@
                                     <CheckBox   Height="22"  Foreground="Black" Width="21"/>
                                     <Label Content="BAD WEATHER"/>
                                 </StackPanel>
-                        
 
-                                <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
+
                             </Grid>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
                         <StackPanel Orientation="Vertical" Margin="0,30,26,0" Grid.Row="0" Grid.Column="4" >
-                    
-                           
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
+
+
                         </StackPanel>
                     </Grid>
                 </Border>
@@ -363,7 +347,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding ProfileModel.name}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
+                                    <TextBox BorderThickness="0" Text="{Binding UserRating}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
 
                                     </TextBox>
                                     <Button  Height="10" Width="15"  BorderBrush="Transparent" Command="{Binding TextCopyCONTROL_KEY_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
@@ -376,7 +360,6 @@
 
 
 
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -400,7 +383,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding ProfileModel.name}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
+                                    <TextBox BorderThickness="0" Text="{Binding UserFeedBack}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
 
                                     </TextBox>
                                     <Button  Height="10" Width="15"  BorderBrush="Transparent" Command="{Binding TextCopyCONTROL_KEY_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
@@ -411,7 +394,6 @@
                                 </Grid>
                             </Border>
 
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -427,9 +409,11 @@
                                 </Label.Template>
                             </Label>
                             <Border BorderBrush="#A9ABB1" Height="35" BorderThickness="1" CornerRadius="5" Width="152" >
-                               
+
+                                <TextBox BorderThickness="0" Text="{Binding UAVId}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
+
+                                </TextBox>
                             </Border>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -453,7 +437,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding ProfileModel.name}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
+                                    <TextBox BorderThickness="0" Text="{Binding ControlKey}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
 
                                     </TextBox>
                                     <Button  Height="10" Width="15"  BorderBrush="Transparent" Command="{Binding TextCopyCONTROL_KEY_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
@@ -463,7 +447,6 @@
                                     </Button>
                                 </Grid>
                             </Border>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
 
@@ -487,7 +470,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding ProfileModel.name}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
+                                    <TextBox BorderThickness="0" Text="{Binding SecretKey}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
 
                                     </TextBox>
                                     <Button  Height="10" Width="15"  BorderBrush="Transparent" Command="{Binding TextCopyCONTROL_KEY_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
@@ -497,7 +480,6 @@
                                     </Button>
                                 </Grid>
                             </Border>
-                            <Label Margin="15,0,0,0" Padding="0" Content="Please Enter a Valid Name" Foreground="Red" Visibility="Hidden"/>
                         </StackPanel>
 
                     </Grid>
