--- a/ideaForge/Pages/DashboardPages/IFDockPage.xaml
+++ b/ideaForge/Pages/DashboardPages/IFDockPage.xaml
@@ -291,7 +291,8 @@
                         DisplayMemberPath="city_Name"
     TextSearch.TextPath="city_Name"
     ItemsSource="{Binding CityList}"
-     SelectedValue="{Binding RegisterModel.city}"                   
+     SelectedValue="{Binding RegisterModel.city}"    
+                            Height="30"
    />
                     </Border>
 
@@ -300,7 +301,7 @@
 
                 <!-- Row 2 Started-->
                 <StackPanel  Grid.Row="2" Orientation="Vertical">
-                    <Border Height="50" BorderBrush="#A9ABB1" Margin="15,0,15,15" BorderThickness="1" CornerRadius="5">
+                    <Border Height="55" BorderBrush="#A9ABB1" Margin="15,0,15,15" BorderThickness="1" CornerRadius="5">
                         <RichTextBox  />
                     </Border>
                 </StackPanel>
@@ -316,7 +317,7 @@
             Grid.Column="1"
                 
             x:Name="Send" 
-            BorderThickness="1" Margin="10,5,15,5"
+            BorderThickness="1" Margin="10,10,15,10"
             BorderBrush="Black" 
                 Content="CONTINUE" 
             Foreground="White" 
@@ -338,7 +339,7 @@
             Grid.Column="0"
                 
             
-            BorderThickness="1" Margin="15,5,10,5"
+            BorderThickness="1" Margin="15,10,10,10"
             BorderBrush="Black" 
                 Content="Cancel" 
             Foreground="White" 
