Front End Labels fixed on CompletedRidePage and PendingRidePage

--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -43,7 +43,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding MissionType}" Height="35"  Foreground="Black">
                             </TextBox>
                         </StackPanel>
 
@@ -59,7 +59,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding TotalrequestedTime}" Height="35"  Foreground="Black">
                             </TextBox>
                         </StackPanel>
 
@@ -75,7 +75,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding FlightDate}" Height="35"  Foreground="Black">
                             </TextBox>
                         </StackPanel>
 
@@ -90,7 +90,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black" Margin="15,0,0,0">
+                            <TextBox  Text="{Binding FlightTime}" Height="35"  Foreground="Black" Margin="15,0,0,0">
                             </TextBox>
                         </StackPanel>
 
@@ -144,7 +144,7 @@
                                     </ControlTemplate>
                                 </Label.Template>
                             </Label>
-                            <TextBox  Text="{Binding ProfileModel.name}" Height="35"  Foreground="Black">
+                            <TextBox  Text="{Binding StatusForUser}" Height="35"  Foreground="Black">
                             </TextBox>
                         </StackPanel>
 
@@ -321,7 +321,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding ProfileModel.name}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
+                                    <TextBox BorderThickness="0" Text="{Binding ControlKey}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
 
                                     </TextBox>
                                     <Button  Height="10" Width="15"  BorderBrush="Transparent" Command="{Binding TextCopyCONTROL_KEY_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
@@ -351,7 +351,7 @@
                                         <ColumnDefinition Width="*" MinWidth="120"/>
                                         <ColumnDefinition Width="auto" />
                                     </Grid.ColumnDefinitions>
-                                    <TextBox BorderThickness="0" Text="{Binding ProfileModel.name}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
+                                    <TextBox BorderThickness="0" Text="{Binding SecretKey}" Height="35" Grid.Row="0" Grid.Column="0" IsEnabled="False" Foreground="Black">
                                     </TextBox>
                                     <Button  Height="10" Width="15" BorderBrush="Transparent" Command="{Binding TextCopySECRET_KEY_Comand}" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
                                         <Button.Background>
