--- a/ideaForge/Pages/DashboardPages/Requests.xaml
+++ b/ideaForge/Pages/DashboardPages/Requests.xaml
@@ -12,24 +12,53 @@
         <vm:RequestViewModel/>
     </UserControl.DataContext>
     <Grid>
+        <TabControl  >
+            <TabControl.Resources>
+                <Style TargetType="TabItem">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="TabItem">
+                                <Border Name="Border" BorderThickness="1,1,1,0" BorderBrush="#A9ABB1" CornerRadius="4,4,0,0" Margin="2,0">
+                                    <ContentPresenter x:Name="ContentSite"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Center"
+                                                          
+                                        ContentSource="Header"
+                                        Height="28"
+                                        Width="150"
+                                        Margin="10,2"/>
+                                </Border>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsSelected" Value="True">
+                                        <Setter TargetName="Border" Property="Background" Value="#91C84F" />
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="False">
+                                        <Setter TargetName="Border" Property="Background" Value="#A9ABB1" />
+                                    </Trigger>
 
-        <mah:MetroTabControl>
+                                </ControlTemplate.Triggers>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </TabControl.Resources>
             <TabItem  Header="Today's Requests" Background="#A9ABB1" 
-                      BorderBrush="#A9ABB1"
-                      BorderThickness="1">
+                      FontSize="18"
+                      Foreground="White"
+                      >
                 <Grid Background="#FFF">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="33*"/>
                         <ColumnDefinition Width="67*"/>
                     </Grid.ColumnDefinitions>
                     <DataGrid
-                        
+                         FontSize="14"
                    MouseDoubleClick="DataGrid_MouseDoubleClick"
                         ItemsSource="{Binding TodaysRequests,Mode=TwoWay}" 
                         AutoGenerateColumns="False"
                         CanUserSortColumns="True" 
                         Grid.ColumnSpan="2">
-                        
+
                         <!--<DataGrid.Resources>
                             <Style TargetType="{x:Type DataGridColumnHeader}">
                                 <Setter Property="ContentTemplate">
@@ -106,7 +135,9 @@
                             <DataGridTemplateColumn CanUserSort="True" Header="Action">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <StackPanel Orientation="Horizontal">
+                                        <StackPanel Orientation="Horizontal"  
+                                                    Visibility="{Binding IsVisibleButton, FallbackValue=Hidden}"
+                                                    >
                                             <Button BorderBrush="#E9E9E9" 
                                                     BorderThickness="1"
                                                     Background="Transparent">
@@ -133,23 +164,26 @@
 
 
                         </DataGrid.Columns>
-                        
+
                     </DataGrid>
-                    
+
                 </Grid>
             </TabItem>
-            <TabItem Header="All Requests"  Background="#A9ABB1" 
-                     BorderBrush="#A9ABB1"
-                     BorderThickness="1">
+            <TabItem Header="All Requests" 
+                     Foreground="White"
+                     Background="#A9ABB1" 
+                     FontSize="18"
+                     >
                 <Grid Background="#FFF">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="33*"/>
                         <ColumnDefinition Width="67*"/>
                     </Grid.ColumnDefinitions>
-                    <DataGrid 
+                    <DataGrid FontSize="14"
+                         CanUserDeleteRows="False" CanUserAddRows="False" SelectionMode="Single"
                    MouseDoubleClick="DataGrid_MouseDoubleClick"
                         SelectedItem="{Binding SelectedAllRequest,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                        ItemsSource="{Binding AllRequests,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
+                        ItemsSource="{Binding AllRequests,Mode=TwoWay}" 
                         
                         AutoGenerateColumns="False"
                         CanUserSortColumns="True" 
@@ -230,15 +264,14 @@
                             <DataGridTemplateColumn CanUserSort="True" Header="Action">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <StackPanel Orientation="Horizontal">
+                                        <StackPanel Orientation="Horizontal" Visibility="{Binding IsVisibleButton, FallbackValue=Hidden}">
                                             <Button BorderBrush="#E9E9E9" 
                                                     BorderThickness="1"
                                                     Background="Transparent"
                                                     Command="{Binding 
                                                 RelativeSource={RelativeSource 
                                                 AncestorType={x:Type UserControl}}, 
-                                                Path=DataContext.AcceptedCommand,
-                                                UpdateSourceTrigger=PropertyChanged}"
+                                                Path=DataContext.AcceptedCommand}"
                                                     CommandParameter="{Binding .}">
                                                 <StackPanel Orientation="Horizontal">
                                                     <Image Source="/Images/acceptIcon.png" />
@@ -271,7 +304,8 @@
                     </DataGrid>
                 </Grid>
             </TabItem>
-        </mah:MetroTabControl>
+        </TabControl>
+        
         <mah:ProgressRing
                     IsActive="{Binding IsBusy}" 
                     Foreground="#91C84F" 
