--- a/ideaForge/Pages/DashboardPages/RequestsPage.xaml
+++ b/ideaForge/Pages/DashboardPages/RequestsPage.xaml
@@ -7,6 +7,44 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
-            
+        <Grid>
+            <TabControl Margin="10" >
+                <TabControl.Resources>
+                    <Style TargetType="TabItem">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="TabItem">
+                                    <Border Name="Border" BorderThickness="1,1,1,0" BorderBrush="#A9ABB1" CornerRadius="4,4,0,0" Margin="2,0">
+                                        <ContentPresenter x:Name="ContentSite"
+                                        VerticalAlignment="Center"
+                                        HorizontalAlignment="Center"
+                                                          
+                                        ContentSource="Header"
+                                        Height="28"
+                                        Width="90"
+                                        Margin="10,2"/>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsSelected" Value="True">
+                                            <Setter TargetName="Border" Property="Background" Value="#91C84F" />
+                                        </Trigger>
+                                        <Trigger Property="IsSelected" Value="False">
+                                            <Setter TargetName="Border" Property="Background" Value="#A9ABB1" />
+                                        </Trigger>
+                                     
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </TabControl.Resources>
+                <TabItem Header="General" Foreground="White" FontSize="18">
+                    <Label Content="Content goes here..." />
+                </TabItem>
+                <TabItem Header="Security" Foreground="White" FontSize="18" />
+                <TabItem Header="Details" Foreground="White" FontSize="18" />
+            </TabControl>
+        </Grid>
+
     </Grid>
 </UserControl>
